# kora

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Justfile  README.md  deny.toml  full-plan.md  plan.md
.github/workflows/: ci.yml  examples.yml
crates/e2e/: Cargo.toml
crates/e2e/src/: harness.rs  lib.rs  node.rs  setup.rs
crates/e2e/src/tests/: consensus.rs  execution.rs  mod.rs  resilience.rs
crates/network/marshal/src/: actor.rs
crates/network/marshal/tests/: integration.rs
crates/network/transport-sim/: Cargo.toml
crates/network/transport-sim/src/: lib.rs
crates/network/transport/src/: builder.rs  bundle.rs  lib.rs  network_provider.rs
crates/node/config/: Cargo.toml
crates/node/config/src/: consensus.rs  error.rs  execution.rs  lib.rs  network.rs  node.rs  rpc.rs
crates/node/consensus/: Cargo.toml
crates/node/consensus/src/: application.rs  error.rs  ledger.rs  lib.rs  proposal.rs  traits.rs
crates/node/consensus/src/components/: mempool.rs  seed.rs  snapshot.rs
crates/node/dkg/: Cargo.toml  README.md
crates/node/dkg/src/: ceremony.rs  config.rs  error.rs  lib.rs  message.rs  network.rs  output.rs  protocol.rs  state.rs  tests.rs
crates/node/domain/: Cargo.toml
crates/node/domain/src/: aliases.rs  block.rs  bootstrap.rs  commitment.rs  events.rs  evm.rs  idents.rs  lib.rs  tx.rs
crates/node/executor/: Cargo.toml
crates/node/executor/src/: adapter.rs  lib.rs  outcome.rs  revm.rs
crates/node/executor/tests/: executor.rs
crates/node/ledger/src/: lib.rs
crates/node/reporters/: Cargo.toml  README.md
crates/node/reporters/src/: lib.rs
crates/node/rpc/: Cargo.toml
crates/node/rpc/src/: eth_subscribe.rs  indexed_provider.rs  lib.rs  server.rs  state.rs
crates/node/runner/: Cargo.toml
crates/node/runner/src/: app.rs  error.rs  lib.rs  runner.rs  scheme.rs
crates/node/service/: Cargo.toml
crates/node/service/src/: lib.rs  transport_provider.rs
crates/node/simplex/src/: lib.rs  pool.rs  quota.rs
crates/storage/backend/: Cargo.toml  README.md
crates/storage/backend/src/: accounts.rs  backend.rs  code.rs  config.rs  error.rs  lib.rs  partition.rs  storage.rs  types.rs
crates/storage/handlers/: Cargo.toml  README.md
crates/storage/handlers/src/: adapter.rs  error.rs  lib.rs  qmdb.rs  state.rs
crates/storage/indexer/src/: store.rs  types.rs
crates/storage/overlay/: Cargo.toml  README.md
crates/storage/overlay/src/: overlay.rs
crates/storage/qmdb/: Cargo.toml  README.md
crates/storage/qmdb/src/: changes.rs  database.rs  lib.rs  store.rs
crates/storage/traits/src/: state.rs
crates/utilities/cli/: Cargo.toml  README.md
crates/utilities/cli/src/: lib.rs  sigsegv.rs
docker/: .dockerignore  Dockerfile  Justfile  README.md  docker-bake.hcl
docker/compose/: devnet.yaml
docker/config/: prometheus.yml
docker/grafana/dashboards/: kora-overview.json
docker/scripts/: devnet-run.sh  devnet-stats.sh  entrypoint.sh  healthcheck.sh
docs/: dkg-migration-plan.md
examples/revm/: Cargo.toml  README.md
examples/revm/src/: chain.rs  cli.rs  config.rs  demo.rs  handle.rs  main.rs  outcome.rs  qmdb.rs
examples/revm/src/application/: app.rs  execution.rs  handle.rs  mod.rs  observers.rs
examples/revm/src/application/ledger/: mempool.rs  mod.rs  seed_cache.rs  snapshot_store.rs
examples/revm/src/application/node/: channels.rs  config.rs  marshal.rs  mod.rs  start.rs  transport.rs
examples/revm/src/application/reporters/: finalized.rs  seed.rs
examples/revm/src/simulation/: demo.rs  mod.rs
