[package]
name = "kora-revm-example"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "REVM-based example chain running on threshold-simplex (simplex + threshold BLS signatures)."

[lints]
workspace = true

[[bin]]
name = "kora-revm-example"
bench = false

[dependencies]
# Workspace
kora-backend.workspace = true
kora-domain.workspace = true
kora-handlers.workspace = true
kora-qmdb.workspace = true
kora-traits.workspace = true

# Commonware
commonware-p2p.workspace = true
commonware-utils.workspace = true
commonware-codec.workspace = true
commonware-runtime.workspace = true
commonware-storage.workspace = true
commonware-parallel.workspace = true
commonware-broadcast.workspace = true
commonware-consensus.workspace = true
commonware-cryptography.workspace = true

# General
rand.workspace = true
libc.workspace = true
clap.workspace = true
bytes.workspace = true
anyhow.workspace = true
tracing.workspace = true
futures.workspace = true
thiserror.workspace = true
governor.workspace = true
prometheus-client.workspace = true
tokio.workspace = true

# Execution
alloy-evm = { workspace = true, features = ["std"] }
revm = { workspace = true, features = ["std", "asyncdb"] }
