[package]
name = "kora-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Configuration types for Kora node"

[lints]
workspace = true

[dependencies]
# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Error handling
thiserror.workspace = true

# Misc
alloy-primitives.workspace = true

[dev-dependencies]
rstest = "0.24"
tempfile.workspace = true
