[package]
name = "kora-backend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Commonware-storage based backend for Kora QMDB"

[lints]
workspace = true

[dependencies]
kora-qmdb = { path = "../qmdb" }
kora-handlers = { path = "../handlers" }

alloy-primitives.workspace = true
async-trait = "0.1"
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt", "macros"] }
