[package]
name = "kora-backend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Commonware-storage based backend for Kora QMDB"

[lints]
workspace = true

[dependencies]
kora-qmdb = { path = "../qmdb" }
kora-handlers = { path = "../handlers" }

alloy-primitives.workspace = true
async-trait = "0.1"
bytes.workspace = true
commonware-codec.workspace = true
commonware-cryptography.workspace = true
commonware-runtime.workspace = true
commonware-storage.workspace = true
commonware-utils.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
